@@ -28,6 +28,7 @@ import java.io.*;
 import java.text.*;
 import java.util.Date;
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.jedit.browser.VFSBrowser;
 import org.gjt.sp.util.Log;
 //}}}
 
@@ -37,6 +38,91 @@ import org.gjt.sp.util.Log;
  */
 public class VFSFile implements Serializable
 {
+	//{{{ findCompletion() method
+	/**
+	 * Return the index of a file whose name matches the given string,
+	 * in a case-insensitive manner. Exact matches are preferred.
+	 * @param files The list of files
+	 * @param start The start index, inclusive
+	 * @param start The end index, exclusive
+	 * @param str The string to match
+	 * @param dirsOnly Only match directories?
+	 * @since jEdit 4.3pre3
+	 */
+	public static int findCompletion(VFSFile[] files, int start, int end,
+		String str, boolean dirsOnly)
+	{
+		for(int i = start; i < end; i++)
+		{
+			VFSFile file = files[i];
+			String matchAgainst = (MiscUtilities.isAbsolutePath(str)
+				? file.getPath() : file.getName());
+
+			if(dirsOnly && file.getType() == VFSFile.FILE)
+				continue;
+			/* try exact match first */
+			else if(matchAgainst.equals(str))
+				return i;
+			else if(matchAgainst.regionMatches(true,0,str,0,str.length()))
+				return i;
+		}
+
+		return -1;
+	} //}}}
+
+	//{{{ findCompletion() method
+	public static String findCompletion(String path, String complete,
+		VFSBrowser browser, boolean dirsOnly)
+	{
+		Log.log(Log.DEBUG,VFSFile.class,"findCompletion(" + path + "," + complete
+			+ "," + dirsOnly + ")");
+
+		if(complete.equals("~"))
+			return System.getProperty("user.home");
+		else if(complete.equals("-"))
+			return browser.getView().getBuffer().getDirectory();
+
+		if(MiscUtilities.isAbsolutePath(complete))
+		{
+			if(MiscUtilities.isURL(complete))
+				return complete;
+			else
+				path = "roots:";
+		}
+
+		VFS vfs = VFSManager.getVFSForPath(path);
+		if((vfs.getCapabilities() & VFS.LOW_LATENCY_CAP) == 0)
+			return null;
+		Object session = vfs.createVFSSession(path,browser);
+		if(session == null)
+			return null;
+
+		try
+		{
+			VFSFile[] files = vfs._listFiles(session,path,browser);
+			int index = findCompletion(files,0,files.length,complete,dirsOnly);
+			if(index != -1)
+				return files[index].path;
+		}
+		catch(IOException e)
+		{
+			VFSManager.error(e,path,browser);
+		}
+		finally
+		{
+			try
+			{
+				vfs._endVFSSession(session,browser);
+			}
+			catch(IOException e)
+			{
+				VFSManager.error(e,path,browser);
+			}
+		}
+		
+		return null;
+	} //}}}
+
 	//{{{ File types
 	public static final int FILE = 0;
 	public static final int DIRECTORY = 1;
